# ocean

./: .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: CI.yml
cli/: Cargo.toml  README.md  build.rs
cli/examples/life/: Ocean.toml  life
cli/src/: cli.rs  macros.rs  main.rs  state.rs
cli/src/cli/: exec.rs  mod.rs
cli/src/cmd/: docs.rs  home.rs  install.rs  list.rs  login.rs  mod.rs  new.rs  package.rs  prelude.rs  run.rs  search.rs  ship.rs  source.rs  uninstall.rs  update.rs
cli/src/cmd/cfg/: mod.rs
cli/src/cmd/config/: mod.rs
cli/src/cmd/report/: bug.rs  mod.rs
cli/src/cmd/self/: mod.rs  rev.rs  uninstall.rs  update.rs
cli/src/cmd/submit/: bug.rs  feature.rs  mod.rs
examples/meaning-of-life/: Ocean.toml  meaning-of-life
lib/: Cargo.toml  README.md
lib/src/: api.rs  archive.rs  env.rs  flexible.rs  install.rs  lib.rs  macros.rs  path.rs  system.rs  version.rs
lib/src/api/: mod.rs  v1.rs
lib/src/api/v1/: download.rs  login.rs  mod.rs  ship.rs
lib/src/auth/: credentials.rs  mod.rs
lib/src/cfg/: file.rs  mod.rs
lib/src/config/: file.rs  mod.rs  rt.rs  user.rs
lib/src/drop/: app.rs  exe.rs  font.rs  license.rs  manifest.rs  mod.rs  name.rs  package.rs  version.rs
lib/src/drop/kind/: exe.rs  lib.rs  mod.rs
lib/src/drop/license/: expr.rs  mod.rs  serde.rs  spdx.rs
lib/src/drop/license/spdx/: decl.rs  mod.rs
lib/src/drop/manifest/: dep.rs  deps.rs  detailed.rs  git.rs  meta.rs  mod.rs  tests.rs  version.rs
lib/src/drop/name/: mod.rs  parse.rs  query.rs  scoped.rs  valid.rs
lib/src/drop/source/: git.rs  mod.rs
lib/src/ext/: bytes.rs  mod.rs
lib/src/install/: mod.rs  target.rs
shared/: Cargo.toml  README.md
shared/src/: lib.rs
shared/src/ext/: bytes.rs  ffi.rs  mod.rs  path.rs  process.rs
