[package]
name = "oceanpkg-cli"
description = "Command-line interface for the Ocean package manager."
version = "0.0.0"
authors = ["The Ocean Project Developers"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://www.oceanpkg.org"
publish = false

[[bin]]
name = "ocean"
path = "src/main.rs"

[dependencies]
oceanpkg = { path = "../lib", version = "0.0.10", features = ["reqwest"] }
chrono = "0.4"
clap = "2.33"
dirs = "2"
failure = "0.1.6"
log = "0.4"
fern = "0.5"
rpassword = "4"
toml = "0.5"
url = "2.1"
