[package]
name = "oceanpkg-cli"
description = "Command-line interface for the Ocean package manager."
version = "0.0.0"
authors = ["The Ocean Project Developers"]
license = "AGPL-3.0"
readme = "README.md"
edition = "2018"
homepage = "https://www.oceanpkg.org"
publish = false

[[bin]]
name = "ocean"
path = "src/main.rs"

[dependencies]
oceanpkg = { path = "../lib", version = "0.0.10", features = ["reqwest", "toml"] }
clap = "2.33"
dirs = "2"
failure = "0.1.6"
reqwest = "0.9.22"
rpassword = "4"
toml = "0.5"
url = "2.1"
