[package]
name = "oceanpkg"
description = "Client library for the Ocean package manager."
version = "0.0.8"
authors = ["The Ocean Project Developers"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://www.oceanpkg.org"
repository = "https://github.com/oceanpkg/ocean"
documentation = "https://docs.rs/oceanpkg"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
dirs = "1"
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
toml = "0.5"
linfo = { version = "0.1.3", features = ["phf", "serde"] }
static_assertions = "1.1"
url = "2.1"
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3"
