[package]
name = "oceanpkg"
description = "Client library for the Ocean package manager."
version = "0.0.10"
authors = ["The Ocean Project Developers"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://www.oceanpkg.org"
repository = "https://github.com/oceanpkg/ocean"
documentation = "https://docs.rs/oceanpkg"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
cfg-if = "0.1"
dirs = "1"
lazy_static = "1.4"
linfo = { version = "0.1.3", features = ["phf", "serde"] }
log = "0.4"
reqwest = { version = "0.9.22", optional = true }
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", optional = true }
static_assertions = "1.1"
toml = { version = "0.5", optional = true }
url = "2.1"

[dev-dependencies]
tempfile = "3"
