[package]
name = "oceanpkg"
description = "Client library for the Ocean package manager."
version = "0.0.10"
authors = ["The Ocean Project Developers"]
license = "Apache-2.0"
readme = "README.md"
edition = "2018"
homepage = "https://www.oceanpkg.org"
repository = "https://github.com/oceanpkg/ocean"
documentation = "https://docs.rs/oceanpkg"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "CHANGELOG.md", "LICENSE*"]

[dependencies]
oceanpkg-shared = { version = "0.1.0", path = "../shared" }
cfg-if = "0.1"
dirs = "1"
flate2 = "1"
http = "0.1"
lazy_static = "1.4"
lazycell = "1.2"
linfo = { version = "0.1.3", features = ["phf", "serde"] }
reqwest = { version = "0.9.22", optional = true }
semver = { version = "0.9", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
static_assertions = "1.1"
tar = "0.4"
toml = { version = "0.5", optional = true }
url = "2.1"

[dev-dependencies]
tempfile = "3"
